Fix: solve odd scroll behaviors on safari + refactoring

--- a/src/index.css
+++ b/src/index.css
@@ -4,25 +4,21 @@
 	font-synthesis: none;
 }
 
-#root {
-	position: absolute;
-	top: 0px;
-	width: 100vw;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	overflow: hidden;
-}
-
 body {
 	margin: 0;
 	display: flex;
 	place-items: center;
 }
 
-h1 {
-	font-size: 3.2em;
-	line-height: 1.1;
+#root {
+	position: absolute;
+	top: 0px;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+	transition: height 200ms ease-out, top 200ms ease-out;
 }
 
 @media screen and (max-width: 600px) {
